feat(service): update findAll method